get all softskills with pagination
