# app/src/swagger/swagger.json
@@ -105,7 +105,7 @@
           {
             "name": "language",
             "in": "path",
-            "description": "length of entity",
+            "description": "lenguage of entity",
             "required": true,
             "example": "en"
           },
@@ -280,12 +280,51 @@
         }
       }
     },
-    "/admin/softSkills/{id}/{languge}": {
+    "/admin/softSkills/{id}/{language}": {
       "get": {
         "summary": "get soft skill",
         "description": "get one soft skill",
         "tags": ["admin"],
+        "parameters": [
+          {
+            "name": "language",
+            "in": "path",
+            "description": "choose language",
+            "required": true,
+            "example": "EN"
+          }
+        ],
         "responses": {
+          "200": {
+            "description": "Return Soft Skils list with paganation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "format": "int32",
+                      "example": 201
+                    },
+
+                    "data": {
+                      "type": "object",
+                      "example": {
+                        "_id": "67d2b18e785705c6acb80d8a",
+                        "title": "Заголовак скіла",
+                        "text": "Текст про скіл",
+                        "createdAt": "2025-03-13T10:21:02.426Z",
+                        "updatedAt": "2025-03-13T10:21:02.426Z",
+                        "__v": 0,
+                        "icon": "67cf323c48b87d88e19b36bd"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
           "404": {
             "content": {
               "application/json": {
@@ -400,6 +439,141 @@
           },
           "500": {
             "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/admin/softSkills/{language}": {
+      "get": {
+        "summary": "get soft skills",
+        "description": "Return Soft Skils list with paganation",
+        "tags": ["admin"],
+        "parameters": [
+          {
+            "name": "language",
+            "in": "path",
+            "description": "choose language",
+            "required": true,
+            "example": "EN"
+          },
+          {
+            "$ref": "#/components/parameters/pageParam"
+          },
+          {
+            "$ref": "#/components/parameters/perPageParam"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Return Soft Skils list with paganation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "format": "int32",
+                      "example": 201
+                    },
+
+                    "page": {
+                      "type": "integer",
+                      "format": "int32",
+                      "example": 1
+                    },
+                    "perPage": {
+                      "type": "integer",
+                      "format": "int32",
+                      "example": 5
+                    },
+                    "totalItems": {
+                      "type": "integer",
+                      "format": "int32",
+                      "example": 100
+                    },
+                    "totalPages": {
+                      "type": "integer",
+                      "format": "int32",
+                      "example": 10
+                    },
+                    "hasPrevPage": {
+                      "type": "boolean",
+                      "example": false
+                    },
+                    "hasNextPage": {
+                      "type": "boolean",
+                      "example": true
+                    },
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "example": {
+                          "_id": "67d2b18e785705c6acb80d8a",
+                          "title": "Заголовак скіла",
+                          "text": "Текст про скіл",
+                          "createdAt": "2025-03-13T10:21:02.426Z",
+                          "updatedAt": "2025-03-13T10:21:02.426Z",
+                          "__v": 0,
+                          "icon": "67cf323c48b87d88e19b36bd"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "content": {
+              "application/json": {
+                "type": "object",
+                "properties": {
+                  "status": {
+                    "type": "integer",
+                    "format": "int32",
+                    "example": 200
+                  },
+                  "data": {
+                    "type": "object",
+                    "properties": {
+                      "_id": {
+                        "type": "string",
+                        "pattern": "^[a-fA-F0-9]{24}$",
+                        "example": "507f1f77bcf86cd799439011"
+                      },
+                      "icon": {
+                        "type": "string",
+                        "pattern": "^[a-fA-F0-9]{24}$",
+                        "example": "507f1f77bcf86cd799439011"
+                      },
+                      "createdAt": "2025-03-13T20:13:44.671Z",
+                      "updatedAt": "2025-03-13T20:13:44.671Z",
+                      "__v": 0,
+                      "title": {
+                        "type": "string",
+                        "example": "Заголовак скіла"
+                      },
+                      "text": {
+                        "type": "string",
+                        "example": "Текст про скіл"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "UNPROCCESSABLE ENTITY",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/unprocessable_entity"
+                }
+              }
+            }
           }
         }
       }
@@ -595,6 +769,28 @@
               }
             }
           }
+        }
+      }
+    },
+    "parameters": {
+      "pageParam": {
+        "name": "page",
+        "in": "query",
+        "description": "number of page in entity list",
+        "require": false,
+        "schema": {
+          "type": "integer",
+          "format": "int32"
+        }
+      },
+      "perPageParam": {
+        "name": "perPage",
+        "in": "query",
+        "description": "number of items in retutned list",
+        "require": false,
+        "schema": {
+          "type": "integer",
+          "format": "int32"
         }
       }
     }
